--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   <title>Spacebook with Comments</title>
 </head>
@@ -10,7 +11,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="page-header">
-        <h1>Spacebook</h1>
+        <h1>Spacebook <i class="fas fa-space-shuttle"></i> </h1>
       </div>
 
       <div class="posts">
